# rust_cassandra_test

./: Cargo.toml  Rocket.toml
src/: main.rs  models.rs
